[package]
name = "genericmud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
flume = "0.11.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["net", "rt-multi-thread", "macros", "io-util", "time"] }
